# wedding-save-the-date

./: Cargo.toml  Dockerfile  docker-compose.yml  install.sh  syslog-wedding-save-the-date.conf  wedding-save-the-date.service
src/: db.rs  db_error.rs  main.rs  model.rs  routes.rs  termination.rs
static/: index.html  index.js
wedding_schema/: create-db.sh  init-db.sh  init-guests.py
