[package]
name = "wedding-save-the-date"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
tokio-postgres = { version="0.7.6", features=["array-impls"] }
log = "0.4"
pretty_env_logger = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
sendmail = "2.0.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
